// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/AddressTile default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c13 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c3 {
  background-color: #F6F8FA;
  border: 1px transparent solid;
  overflow: auto;
  height: 100%;
  padding: 0;
  -webkit-transition: all 0.3s,color 0s,fill 0s;
  transition: all 0.3s,color 0s,fill 0s;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
}

.c4 {
  padding: 1rem 1.25rem 0rem;
}

.c10 {
  margin-top: auto;
  padding: 0 1rem;
  margin-bottom: 1rem;
}

.c8 {
  color: #131336;
}

.c8 p {
  line-height: 2rem;
}

.c9 {
  display: block;
  font-size: 1rem;
  font-weight: 600;
  margin-bottom: 1.25rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c12 svg {
  display: block;
}

.c12 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c12:hover {
  background-color: rgb(33,18,94);
}

.c12:hover svg path {
  fill: #fff;
}

.c2 {
  height: 100%;
  font-size: 0.875rem;
}

.c5 {
  color: #7d7d7d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c6 > span {
  color: #00B0CA;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.5rem;
  opacity: initial;
  padding-left: 0.5rem;
}

.c7 {
  background: #fff;
  border-radius: 5px;
  height: 24px;
  position: relative;
  text-align: center;
  width: 24px;
}

.c7 > div {
  text-align: center;
  margin-top: 4px;
}

.c11 > div {
  display: inline-block;
  padding: 0;
  margin: 0;
  margin-right: 0.6rem;
}

.c1 {
  max-width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className=""
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                onClick={[Function]}
                role="default-address"
              >
                <div
                  className="c7"
                >
                  <div />
                </div>
                <span>
                  Usar como dirección principal
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              John Doe
            </span>
            <p>
              Mirumee
            </p>
            <p>
              St Street
            </p>
            <p>
              Second
            </p>
            <p>
              55-555,
               
              Wroclaw
            </p>
            <p>
              dolnyslask
              , 
            </p>
            <p>
              Poland
            </p>
            <p>
              Celular: 
              555-5555
            </p>
          </div>
        </div>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div>
              <div
                className="c12"
                data-cy="icon_button"
                onClick={[Function]}
              >
                <svg
                  height={22}
                  viewBox="0 0 32 32"
                  width={22}
                >
                  <path
                    d="M30.61,1.39A4.78,4.78,0,0,0,27.24,0h0a4.77,4.77,0,0,0-3.35,1.39L9.32,16a1.63,1.63,0,0,0-.39.64L6.72,23.22a1.62,1.62,0,0,0,1,2.06,1.52,1.52,0,0,0,1,0l6.63-2.21a1.63,1.63,0,0,0,.64-.39L30.61,8.12a4.77,4.77,0,0,0,0-6.73ZM28.74,4.76a1.52,1.52,0,0,1-.44,1.06L14,20.1l-3.18,1.06L11.9,18,26.18,3.71a1.47,1.47,0,0,1,1.06-.44h0a1.5,1.5,0,0,1,1.06.44A1.48,1.48,0,0,1,28.74,4.76ZM27.58,17.11V28.16A3.85,3.85,0,0,1,23.74,32H3.84A3.84,3.84,0,0,1,0,28.16V6.05A3.84,3.84,0,0,1,3.84,2.21H17.1a1.63,1.63,0,1,1,0,3.26H3.84a.58.58,0,0,0-.58.58V28.16a.58.58,0,0,0,.58.58h19.9a.58.58,0,0,0,.58-.58v-11a1.63,1.63,0,1,1,3.26,0Z"
                    fill="#00B0CA"
                  />
                </svg>
              </div>
            </div>
            <div>
              <div
                className="c12"
                data-cy="icon_button"
                onClick={[Function]}
              >
                <svg
                  height={22}
                  viewBox="0 0 32 32"
                  width={22}
                >
                  <path
                    d="M12.35,3.23h7.3a1.62,1.62,0,0,0,1.61-1.61A1.62,1.62,0,0,0,19.65,0h-7.3c-.88-.15-1.46.58-1.46,1.6A1.42,1.42,0,0,0,12.35,3.23ZM27.24,4.69H4.9A1.63,1.63,0,0,0,3.44,6.44,1.57,1.57,0,0,0,4.9,7.9H24V27a1.62,1.62,0,0,1-1.6,1.61H9.57A1.62,1.62,0,0,1,8,27V12.72a1.61,1.61,0,0,0-3.21,0V27.18A4.76,4.76,0,0,0,9.57,32H22.28a4.77,4.77,0,0,0,4.82-4.82V8.05A1.63,1.63,0,0,0,28.56,6.3C28.56,5.42,28.12,5,27.24,4.69Z"
                    fill="#00B0CA"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c13"
  />
</div>
`;

exports[`Storyshots @components/molecules/AddressTile with default shipping and billing as false 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c13 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c3 {
  background-color: #F6F8FA;
  border: 1px transparent solid;
  overflow: auto;
  height: 100%;
  padding: 0;
  -webkit-transition: all 0.3s,color 0s,fill 0s;
  transition: all 0.3s,color 0s,fill 0s;
  border-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
}

.c4 {
  padding: 1rem 1.25rem 0rem;
}

.c10 {
  margin-top: auto;
  padding: 0 1rem;
  margin-bottom: 1rem;
}

.c8 {
  color: #131336;
}

.c8 p {
  line-height: 2rem;
}

.c9 {
  display: block;
  font-size: 1rem;
  font-weight: 600;
  margin-bottom: 1.25rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c12 svg {
  display: block;
}

.c12 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c12:hover {
  background-color: rgb(33,18,94);
}

.c12:hover svg path {
  fill: #fff;
}

.c2 {
  height: 100%;
  font-size: 0.875rem;
}

.c5 {
  color: #7d7d7d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.c6 > span {
  color: #131336;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.5rem;
  opacity: 0.6;
  padding-left: 0.5rem;
}

.c7 {
  background: #fff;
  border-radius: 5px;
  height: 24px;
  position: relative;
  text-align: center;
  width: 24px;
}

.c7 > div {
  text-align: center;
  margin-top: 4px;
}

.c11 > div {
  display: inline-block;
  padding: 0;
  margin: 0;
  margin-right: 0.6rem;
}

.c1 {
  max-width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className=""
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                onClick={[Function]}
                role="default-address"
              >
                <div
                  className="c7"
                >
                  <div />
                </div>
                <span>
                  Usar como dirección principal
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              John Doe
            </span>
            <p>
              Mirumee
            </p>
            <p>
              St Street
            </p>
            <p>
              Second
            </p>
            <p>
              55-555,
               
              Wroclaw
            </p>
            <p>
              dolnyslask
              , 
            </p>
            <p>
              Poland
            </p>
            <p>
              Celular: 
              555-5555
            </p>
          </div>
        </div>
        <div
          className="c10"
        >
          <div
            className="c11"
          >
            <div>
              <div
                className="c12"
                data-cy="icon_button"
                onClick={[Function]}
              >
                <svg
                  height={22}
                  viewBox="0 0 32 32"
                  width={22}
                >
                  <path
                    d="M30.61,1.39A4.78,4.78,0,0,0,27.24,0h0a4.77,4.77,0,0,0-3.35,1.39L9.32,16a1.63,1.63,0,0,0-.39.64L6.72,23.22a1.62,1.62,0,0,0,1,2.06,1.52,1.52,0,0,0,1,0l6.63-2.21a1.63,1.63,0,0,0,.64-.39L30.61,8.12a4.77,4.77,0,0,0,0-6.73ZM28.74,4.76a1.52,1.52,0,0,1-.44,1.06L14,20.1l-3.18,1.06L11.9,18,26.18,3.71a1.47,1.47,0,0,1,1.06-.44h0a1.5,1.5,0,0,1,1.06.44A1.48,1.48,0,0,1,28.74,4.76ZM27.58,17.11V28.16A3.85,3.85,0,0,1,23.74,32H3.84A3.84,3.84,0,0,1,0,28.16V6.05A3.84,3.84,0,0,1,3.84,2.21H17.1a1.63,1.63,0,1,1,0,3.26H3.84a.58.58,0,0,0-.58.58V28.16a.58.58,0,0,0,.58.58h19.9a.58.58,0,0,0,.58-.58v-11a1.63,1.63,0,1,1,3.26,0Z"
                    fill="#00B0CA"
                  />
                </svg>
              </div>
            </div>
            <div>
              <div
                className="c12"
                data-cy="icon_button"
                onClick={[Function]}
              >
                <svg
                  height={22}
                  viewBox="0 0 32 32"
                  width={22}
                >
                  <path
                    d="M12.35,3.23h7.3a1.62,1.62,0,0,0,1.61-1.61A1.62,1.62,0,0,0,19.65,0h-7.3c-.88-.15-1.46.58-1.46,1.6A1.42,1.42,0,0,0,12.35,3.23ZM27.24,4.69H4.9A1.63,1.63,0,0,0,3.44,6.44,1.57,1.57,0,0,0,4.9,7.9H24V27a1.62,1.62,0,0,1-1.6,1.61H9.57A1.62,1.62,0,0,1,8,27V12.72a1.61,1.61,0,0,0-3.21,0V27.18A4.76,4.76,0,0,0,9.57,32H22.28a4.77,4.77,0,0,0,4.82-4.82V8.05A1.63,1.63,0,0,0,28.56,6.3C28.56,5.42,28.12,5,27.24,4.69Z"
                    fill="#00B0CA"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c13"
  />
</div>
`;
